# TaskTracker

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
.github/workflows/: build.yml
TaskTracker/: CMakeLists.txt  CMakeUserPresets.json
TaskTracker/include/: IScene.h  menu.h  sceneManager.h  session.h  sessionTimer.h  tasktracker.h
TaskTracker/src/: main.cpp  sessionTimer.cpp  tasktracker.cpp
TaskTracker/tests/: CMakeLists.txt  SessionTimerTest.cpp
TaskTracker/ui/: tasktracker.ui
